feat: add rules encapsulation api

--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -262,8 +262,8 @@
         var machineModel = $('#machineModel').val();
         var data = {
           machineModel: $('#machineModel').val(),
-          needleQty: $('#needleQty').val(),
-          gear: $('#gear').val(),
+          needleQty: $('#needleQty').data('kendoDropDownList').text(),
+          gear: $('#gear').data('kendoDropDownList').text(),
           yarnLength: $('#yarnLength').val(),
           degree: $('#degree').val(),
         }
