--- a/views/login.ejs
+++ b/views/login.ejs
@@ -7,21 +7,45 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>智能化计算后台管理系统</title>
-  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+  <link rel="shortcut icon" href="image/favicon.ico" type="image/x-icon">
   <link href="css/bootstrap.min.css" rel="stylesheet">
   <script src="js/jquery.min.js"></script>
   <script src="js/bootstrap.bundle.min.js"></script>
+  <style>
+    body {
+      background: #ECF0F5;
+      font-family: 微软雅黑;
+    }
+  </style>
 </head>
 
 <body>
-  <%= message %>
-    <form action="admin/login" method="POST">
-      <label for="name">Name:</label>
-      <input id="name" name="name" type="text">
-      <label for="password">Password:</label>
-      <input id="password" name="password" type="password">
-      <button type="submit">Login</button>
-    </form>
+  <div class="row mb-5">
+    <div class="col p-3 shadow bg-info text-center text-white" style="font-weight: bold; font-size: 22px; letter-spacing: 5px">
+      智能化计算后台管理系统
+    </div>
+  </div>
+  <div class="container">
+    <div class="row">
+      <div class="col-6 m-auto bg-light shadow rounded p-3">
+        <div class="text-danger">
+          <%= message %>
+        </div>
+        <form action="admin/login" method="POST">
+          <div class="form-group">
+            <label for="name">Name:</label>
+            <input class="form-control" id="name" name="name" type="text">
+          </div>
+          <div class="form-group">
+            <label for="password">Password:</label>
+            <input class="form-control" id="password" name="password" type="password">
+          </div>
+          <button class="btn btn-primary" type="submit">Login</button>
+        </form>
+
+      </div>
+    </div>
+  </div>
 </body>
 
 </html>
